salesforce/10.22/modules/ROOT/pages/index.adoc
= Salesforce Connector 10.22 - Mule 4
:page-aliases: connectors::salesforce/salesforce-connector.adoc, connectors::salesforce-about.adoc, connectors::salesforce-to-work-with-topics.adoc, connectors::salesforce-to-work-with-streaming-channels.adoc, connectors::salesforce-to-receive-custom-events.adoc, connectors::salesforce-about-date-calendar-object-storage.adoc, connectors::salesforce-to-create-bulk-objects.adoc, connectors::salesforce-to-consumer-key.adoc, connectors::salesforce-to-generate-keystore-file.adoc, connectors::salesforce-about-apex-setting.adoc, connectors::salesforce-about-authentication.adoc, connectors::salesforce-about-proxy-settings.adoc, connectors::salesforce-about-threads-concurrency.adoc, connectors::salesforce-about-salesforce-apis.adoc, connectors::salesforce-tips.adoc, connectors::salesforce-xml-ref.adoc

Anypoint Connector for Salesforce (Salesforce Connector) enables you to create apps that react to Salesforce events such as adding, changing, or deleting objects, topics, documents, and channels.

Salesforce Connector enables you to connect to the Salesforce APIs. This connector exposes methods for accessing Salesforce, including working with the https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_dev_process_chapter.htm[Salesforce Apex classes].

This connector works with the Salesforce SOAP API, REST API, Bulk API, and Streaming API, depending on the operation you configure. Each API call uses a request/response pattern over an HTTPS connection. All required request headers, error handling, and HTTPS connection configurations are built into the connector.

For compatibility information and fixed issues, see the Salesforce Connector release notes.

== Before You Begin

To use this connector, you must be familiar with:

* The Salesforce SOAP, REST, Bulk, and Streaming APIs
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements and global elements in a Mule flow
* Creating a Mule app using Anypoint Studio (Studio)

Before creating an app, you must have:

* Access to the Salesforce target resource, which requires a  https://developer.salesforce.com[Salesforce developer account] and https://help.salesforce.com/articleView?id=user_security_token.htm[Salesforce security token].
+
You can receive a new security token by email if you run *Reset Security Token* through *My Personal Information* from the Salesforce Setup pages.
+
* A consumer key and secret (available in your Salesforce developer account)
* The namespace and schema location, if you are using OAuth authentication. 
+
If you plan to create the XML for your Mule app, include the correct namespace and schema location in your XML file. Studio adds this information to the XML file automatically when you add Salesforce Connector to a flow in a Mule app.

== Limitations

* Salesforce Connector does not expose all possible operations of the Salesforce APIs.
* Salesforce Connector does not provide access to the Chatter API or Tooling API.

== Audience

* New users
+
Read this document and create your Mule app in xref:salesforce-connector-studio.adoc[Anypoint Studio].
+
The xref:salesforce-connector-config-topics.adoc[Additional Configuration Information] topic
helps you extend your understanding of the connector.
* Advanced users
+
Read xref:salesforce-connector-xml-maven.adoc[XML and Maven Support],
the xref:salesforce-connector-config-topics.adoc[Additional Configuration Information] topic,
and xref:salesforce-connector-examples.adoc[Examples].

== Common Use Cases for the Connector

Common use cases for Salesforce Connector include:

* *ERP Integration*
+
Give your sales team access to all relevant customer data from one system via real-time synchronization of data between Salesforce and your ERP & finance applications. For example, use Anypoint Connector for SAP (SAP Connector) to sync data between Salesforce and SAP and Anypoint Connector for NetSuite (NetSuite Connector) to sync data between Salesforce and NetSuite.

* *Data Aggregation*
+
Collect data from multiple Salesforce orgs, other CRMs, ERP systems, and databases into one Salesforce instance or use that information to generate reports.

* *Legacy Modernization*
+
Easily manage data post-acquisition, move off of a legacy CRM system, or migrate ERP data into Salesforce by automatically moving your data into Salesforce.

* *Customer Experience*
+
Deliver a consistent, connected customer experience across channels, increase customer satisfaction, and drive revenue growth by integrating Salesforce to applications such as ServiceNow, Marketo, and others.

For examples of these use cases, refer to xref:salesforce-connector-examples.adoc[Salesforce Connector Examples].

== Authentication Types

Salesforce Connector connections use the following authentication types:

* Basic authentication
+
Uses a username and password for authentication
+
* OAuth 2.0
+
Delegates user authentication to the service hosting the user account
+
* OAuth JWT
+
Uses OAuth 2.0 with a JSON Web token (JWT) request for user authentication
* OAuth SAML
+
Uses OAuth 2.0 with a signed SAML 2.0 assertion to request an access token
+
* OAuth Username password
+
Uses OAuth 2.0 with a user and password for authentication

For information about configuring these authentication types, see xref:salesforce-connector-studio.adoc[Using Anypoint Studio to Configure Salesforce Connector].

== Salesforce Connector Configurations and Examples

The following table provides links to specific Salesforce Connector information:

[%header%autowidth.spread]
|===
|Subject |Description
|xref:salesforce-connector-examples.adoc#accandtrans[Accept and Transform Data] |Accept and transform data from Salesforce example
|xref:salesforce-connector-studio.adoc#apexsets[Apex SOAP and REST] |Configure for APEX SOAP API and APEX REST API
|<<apis,APIs>> |List of Salesforce APIs that this connector can access
|<<developapp, Application Development>> |Process order and integration patterns
|xref:salesforce-connector-config-topics.adoc#batchdata[Batched Data] |Batch data using the Salesforce Bulk API
|xref:salesforce-connector-config-topics.adoc#leadconvert[Lead Convert Request ID] |Specify a lead ID using DataWeave
|xref:salesforce-connector-examples.adoc#parentchild[Parent Child Relationships] |Create and update parent and child relationships example
|<<Anypoint Exchange Templates and Examples>> |Simplify Salesforce Connector development with a template or example
|xref:salesforce-connector-processing-events.adoc#topicsub[Subscribe Topic] |Subscribe to a Salesforce topic
|xref:salesforce-connector-processing-events.adoc#streamsub[Subscribe Streaming Channel] |Subscribe to a Salesforce streaming channel
|xref:salesforce-connector-processing-events.adoc#topicrep[Replay Topic] |Replay events from a Topic
|xref:salesforce-connector-processing-events.adoc#channelrep[Replay Streaming Channel] |Replay Events from a Salesforce streaming channel
|xref:salesforce-connector-processing-events.adoc#customevents[Custom Event Notifications] |Get custom event notifications over a streaming channel
|xref:salesforce-connector-processing-events.adoc#pushevents[Push Event Notifications] |Push Events to a Streaming Channel
|xref:salesforce-connector-processing-events.adoc#objectstoreusage[Object Store Usage] |Object Store usage and limitations
|===

[[developapp]]
== Develop an Application

To build an app, perform the following tasks:

. Configure the connector.
. Test the connection.
. Build the rest of your flow.
. Add and configure DataWeave.

When developing an app, Salesforce Connector provides these integration patterns
you can use with the Salesforce APIs:

* Batch Data Synchronization
+
An external system accesses, changes, deletes, or adds data in Salesforce in batches, and vice versa (Salesforce to external system).
* Remote Call-In
+
An external system accesses, changes, deletes, or adds data in Salesforce, and vice versa (Salesforce to external system).
* Fire and Forget Remote Process Invocation
+
Salesforce initiates a process in a third-party system and receives an acknowledgment that the process has started. The third-party system continues processing independent of Salesforce.
* Request-Reply Remote Process Invocation
+
Salesforce initiates a process in a remote system, waits for the remote system to finish processing, and accepts control returned from the remote system.
* User Interface Update Based on Data Changes
+
The Salesforce UI updates in response to a change in a third-party system.

[[apis]]
== Salesforce APIs

Salesforce Connector works with the Salesforce Apex SOAP API, Apex REST API, Bulk API, Metadata API, and Streaming API, but does not provide access to the Chatter API or the Tooling API. Each API call uses a request/response pattern over an HTTPS connection. All required request headers, error handling, and HTTPS connection configurations are built into the connector.

* Apex SOAP API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_api.htm?search_text=soap[Apex SOAP API] exposes Apex class methods as custom SOAP web service calls. This allows an external app to invoke an Apex web service to perform an action in Salesforce.
+
* Apex REST API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_rest.htm[Apex REST API] creates your own REST-based web services using Apex. This API has all of the advantages of the REST architecture, while adding the ability to define custom logic and including automatic argument or object mapping.
+
* Bulk API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api_asynch.meta/api_asynch/asynch_api_intro.htm[Bulk API] quickly and securely loads batches of your organization's data into Salesforce. See also xref:salesforce-connector-config-topics.adoc#batchdata[Load Data in Batches].
+
* Metadata API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api_meta.meta/api_meta/meta_intro.htm[Metadata API] manages customizations and build tools that work with the metadata model, not the data itself.
+
* SOAP API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/sforce_api_quickstart_intro.htm[SOAP API] provides secure access to your organization's information on Salesforce. Most of the operations that Salesforce Connector performs map to this API.
+
All the Salesforce operations performed through the SOAP API have an optional parameter called `Headers` that can take any of the https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/soap_headers.htm[Salesforce SOAP headers].
+
* Streaming API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api_streaming.meta/api_streaming/intro_stream.htm[Streaming API] securely receives notifications about changes to your organization's information in Salesforce. See xref:salesforce-connector-processing-events.adoc#createchannel[Create a Streaming Channel to Receive Data from Salesforce] for more information about the use of the Streaming API.

== Anypoint Exchange Templates and Examples

https://www.mulesoft.com/exchange/[Anypoint Exchange] provides templates
you can use as a starting point for your app, as well as examples that illustrate a complete solution.

=== Salesforce Connector Templates in Exchange

https://www.mulesoft.com/exchange/?search=salesforce&type=template[Anypoint Exchange templates] provide starting points for Studio projects such as:

* Account Broadcast template
+
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc.wday.sap.db-account-broadcast/[Salesforce to Salesforce, Workday, SAP, and database account broadcast]
* Aggregation
+
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-contact-aggregation/[contacts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-opportunity-aggregation/[opportunity],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-user-aggregation/[user]
* Bidirectional Sync template
+
** Between Salesforce organizations
+
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-account-bidirectional-sync/[accounts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-contact-bidirectional-sync/[contacts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-casecustomobject-bidirectional-sync/[custom objects],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-opportunity-bidirectional-sync/[opportunities],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-user-bidirectional-sync/[users]
+
** Other sources
+
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2db-account-bidirectional-sync/[database],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2msdyn-account-bidirectional-sync/[Microsoft Dynamics CRM],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sieb-account-bidirectional-sync/[Siebel]
+
* Migration
+
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-account-migration/[accounts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-contact-migration/[contacts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-opportunity-migration/[opportunities]

=== Salesforce Connector Examples in Exchange

https://www.mulesoft.com/exchange/?search=salesforce&type=example[Anypoint Exchange examples] enable you to create complete Studio projects such as:

* Batch processing
+
https://www.mulesoft.com/exchange/org.mule.examples/salesforce-to-MySQL-DB-using-Batch-Processing/[database] and
https://www.mulesoft.com/exchange/org.mule.examples/import-leads-into-salesforce/[import leads]
+
* https://www.mulesoft.com/exchange/org.mule.examples/cache-scope-with-salesforce-contacts/[Contacts]
* https://www.mulesoft.com/exchange/org.mule.examples/salesforce-data-retrieval/[Data retrieval]
* https://www.mulesoft.com/exchange/org.mule.examples/dataweave-with-flowreflookup/[DataWeave]

== Next Steps

After you complete the prerequisites and experiment with templates and examples, you are ready to create an app with xref:salesforce-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* http://blogs.developerforce.com/tech-pubs/2011/10/salesforce-apis-what-they-are-when-to-use-them.html[Salesforce APIs: What they are and when to use them]
* https://help.salesforce.com/HTViewHelpDoc?id=integrate_what_is_api.htm[Which Salesforce API should I use?]
* xref:release-notes::connector/salesforce-connector-release-notes-mule-4.adoc[Salesforce Connector Release Notes]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-salesforce-connector/[Salesforce Connector in Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
